--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="assets/css/apidoc.css" />
+  <title>API Documentation</title>
 </head>
 <body>
 <div ui-view>
